@@ -1,1 +1,1 @@
-Copyright (c) 2005-2006 Nexedi SARL
+Copyright (c) 2005-2009 Nexedi SA
